--- a/src/view/JDlgJMJ_Clientes.form
+++ b/src/view/JDlgJMJ_Clientes.form
@@ -70,7 +70,6 @@
                                               <EmptySpace min="0" pref="6" max="32767" attributes="0"/>
                                               <Group type="103" groupAlignment="0" attributes="0">
                                                   <Component id="jLabel17" alignment="0" min="-2" pref="23" max="-2" attributes="0"/>
-                                                  <Component id="jLabel1" alignment="0" min="-2" pref="55" max="-2" attributes="0"/>
                                                   <Component id="jLabel11" alignment="0" min="-2" pref="68" max="-2" attributes="0"/>
                                                   <Component id="jLabel5" alignment="0" min="-2" max="-2" attributes="0"/>
                                               </Group>
@@ -134,8 +133,12 @@
               </Group>
               <EmptySpace min="37" pref="37" max="-2" attributes="0"/>
           </Group>
-          <Group type="102" alignment="0" attributes="0">
-              <Component id="jTxtUf" min="-2" pref="300" max="-2" attributes="0"/>
+          <Group type="102" attributes="0">
+              <EmptySpace max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="jLabel1" min="-2" pref="55" max="-2" attributes="0"/>
+                  <Component id="jTxtUf" alignment="0" min="-2" pref="290" max="-2" attributes="0"/>
+              </Group>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
