--- a/src/view/JDlgJMJ_Clientes.form
+++ b/src/view/JDlgJMJ_Clientes.form
@@ -37,16 +37,13 @@
                           <Component id="jLabel4" alignment="0" min="-2" max="-2" attributes="0"/>
                           <Group type="102" attributes="0">
                               <EmptySpace max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                              <Group type="103" groupAlignment="0" attributes="0">
                                   <Group type="102" attributes="0">
-                                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                      <Group type="103" groupAlignment="0" attributes="0">
                                           <Component id="jLabel2" alignment="0" min="-2" pref="44" max="-2" attributes="0"/>
-                                          <Component id="jLabel7" alignment="0" min="-2" max="-2" attributes="0"/>
-                                          <Component id="jPwfSenha" alignment="0" pref="294" max="32767" attributes="0"/>
-                                          <Component id="jTxtTelefone" alignment="0" max="32767" attributes="0"/>
-                                          <Component id="jFmtCpf" alignment="0" max="32767" attributes="0"/>
-                                          <Component id="jTxtCodigo" alignment="0" max="32767" attributes="0"/>
-                                          <Component id="jTxtNome" alignment="0" max="32767" attributes="0"/>
+                                          <Component id="jTxtNome" alignment="1" min="-2" pref="294" max="-2" attributes="0"/>
+                                          <Component id="jFmtCpf" alignment="1" min="-2" pref="294" max="-2" attributes="0"/>
+                                          <Component id="jTxtTelefone" alignment="1" min="-2" pref="288" max="-2" attributes="0"/>
                                       </Group>
                                       <EmptySpace max="-2" attributes="0"/>
                                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
@@ -64,10 +61,10 @@
                                           <Component id="jTxtCelular" max="32767" attributes="0"/>
                                       </Group>
                                   </Group>
-                                  <Group type="102" attributes="0">
+                                  <Group type="102" alignment="1" attributes="0">
                                       <Group type="103" groupAlignment="1" attributes="0">
                                           <Group type="102" attributes="0">
-                                              <EmptySpace min="0" pref="6" max="32767" attributes="0"/>
+                                              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                                               <Group type="103" groupAlignment="0" attributes="0">
                                                   <Component id="jLabel17" alignment="0" min="-2" pref="23" max="-2" attributes="0"/>
                                                   <Component id="jLabel11" alignment="0" min="-2" pref="68" max="-2" attributes="0"/>
@@ -75,19 +72,21 @@
                                               </Group>
                                               <EmptySpace min="-2" pref="226" max="-2" attributes="0"/>
                                           </Group>
-                                          <Group type="102" alignment="0" attributes="0">
-                                              <Group type="103" groupAlignment="1" attributes="0">
-                                                  <Component id="jLabel13" alignment="0" min="-2" pref="43" max="-2" attributes="0"/>
-                                                  <Component id="jLabel15" alignment="0" min="-2" pref="43" max="-2" attributes="0"/>
-                                              </Group>
-                                              <EmptySpace max="32767" attributes="0"/>
-                                          </Group>
                                           <Group type="102" alignment="1" attributes="0">
                                               <Group type="103" groupAlignment="1" attributes="0">
                                                   <Component id="jTxtBairro" alignment="0" max="32767" attributes="0"/>
                                                   <Component id="jFmtCep" max="32767" attributes="0"/>
                                               </Group>
                                               <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
+                                          </Group>
+                                          <Group type="102" alignment="0" attributes="0">
+                                              <Group type="103" groupAlignment="1" attributes="0">
+                                                  <Component id="jLabel13" alignment="0" min="-2" pref="43" max="-2" attributes="0"/>
+                                                  <Component id="jLabel15" alignment="0" min="-2" pref="43" max="-2" attributes="0"/>
+                                                  <Component id="jLabel18" alignment="0" min="-2" pref="116" max="-2" attributes="0"/>
+                                                  <Component id="jFmtDataCadastro" alignment="0" max="32767" attributes="0"/>
+                                              </Group>
+                                              <EmptySpace max="-2" attributes="0"/>
                                           </Group>
                                       </Group>
                                       <Group type="103" groupAlignment="0" attributes="0">
@@ -106,8 +105,6 @@
                                               </Group>
                                           </Group>
                                           <Component id="jLabel14" alignment="0" min="-2" pref="72" max="-2" attributes="0"/>
-                                          <Component id="jFmtDataCadastro" alignment="0" min="-2" pref="335" max="-2" attributes="0"/>
-                                          <Component id="jLabel18" min="-2" pref="116" max="-2" attributes="0"/>
                                       </Group>
                                   </Group>
                               </Group>
@@ -116,7 +113,7 @@
                       <EmptySpace max="32767" attributes="0"/>
                       <Component id="jLabel8" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <Group type="102" alignment="1" attributes="0">
+                  <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="14" max="-2" attributes="0"/>
                       <Component id="jBtnIncluir" min="-2" pref="105" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
@@ -138,6 +135,7 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="jLabel1" min="-2" pref="55" max="-2" attributes="0"/>
                   <Component id="jTxtUf" alignment="0" min="-2" pref="290" max="-2" attributes="0"/>
+                  <Component id="jTxtCodigo" alignment="0" min="-2" pref="115" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
@@ -177,14 +175,14 @@
                   <Component id="jFmtCpf" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jLabel9" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="jLabel7" alignment="3" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="jLabel9" min="-2" max="-2" attributes="0"/>
+                  <Component id="jLabel18" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jTxtEmail" alignment="1" min="-2" max="-2" attributes="0"/>
-                  <Component id="jPwfSenha" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="jTxtEmail" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jFmtDataCadastro" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
@@ -222,15 +220,9 @@
                   </Group>
               </Group>
               <EmptySpace min="-2" pref="14" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jLabel18" alignment="1" min="-2" max="-2" attributes="0"/>
-                  <Component id="jLabel17" min="-2" max="-2" attributes="0"/>
-              </Group>
+              <Component id="jLabel17" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jFmtDataCadastro" alignment="1" min="-2" max="-2" attributes="0"/>
-                  <Component id="jTxtUf" min="-2" max="-2" attributes="0"/>
-              </Group>
+              <Component id="jTxtUf" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jChbAtivo" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
@@ -291,21 +283,14 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTxtCodigoActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JLabel" name="jLabel7">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Senha"/>
-      </Properties>
-    </Component>
     <Component class="javax.swing.JLabel" name="jLabel8">
     </Component>
     <Component class="javax.swing.JComboBox" name="jCboSexo">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="4">
-            <StringItem index="0" value="Item 1"/>
-            <StringItem index="1" value="Item 2"/>
-            <StringItem index="2" value="Item 3"/>
-            <StringItem index="3" value="Item 4"/>
+          <StringArray count="2">
+            <StringItem index="0" value="Masculino&#x9;"/>
+            <StringItem index="1" value="Feminino"/>
           </StringArray>
         </Property>
       </Properties>
@@ -389,8 +374,6 @@
       </Events>
     </Component>
     <Component class="javax.swing.JFormattedTextField" name="jFmtCpf">
-    </Component>
-    <Component class="javax.swing.JPasswordField" name="jPwfSenha">
     </Component>
     <Component class="javax.swing.JFormattedTextField" name="jFmtDataCadastro">
     </Component>
