estou finalizando a tabela vendas, mas estou dando push caso dar algo na hora de salvar

--- a/src/view/JDlg_JmjVendas.form
+++ b/src/view/JDlg_JmjVendas.form
@@ -239,7 +239,8 @@
         </Property>
       </Properties>
       <AuxValues>
-        <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+        <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new javax.swing.JComboBox&lt;JmjVendedor&gt;()"/>
+        <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;JmjVendedor&gt;"/>
       </AuxValues>
     </Component>
     <Component class="javax.swing.JButton" name="jBtnIncluirProud">
