Mexi um pouco no vendaBbebidas

--- a/src/view/JDlg_JmjVendasBebidas.form
+++ b/src/view/JDlg_JmjVendasBebidas.form
@@ -104,8 +104,8 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
-                              <Component id="jTxtValorUnitario1" alignment="0" max="32767" attributes="0"/>
-                              <Component id="jCboProdutos" alignment="0" pref="185" max="32767" attributes="0"/>
+                              <Component id="jTxtPreco" alignment="0" max="32767" attributes="0"/>
+                              <Component id="jCboBebidas" alignment="0" pref="185" max="32767" attributes="0"/>
                               <Component id="jLabel16" alignment="0" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <Component id="jLabel3" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -113,18 +113,18 @@
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
                           <Group type="102" attributes="0">
-                              <Component id="jBtnOK1" min="-2" max="-2" attributes="0"/>
+                              <Component id="jBtnoK" min="-2" max="-2" attributes="0"/>
                               <EmptySpace pref="31" max="32767" attributes="0"/>
                               <Component id="jBtnCancelar" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <Component id="jLabel15" min="-2" max="-2" attributes="0"/>
                           <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
-                          <Component id="jTxtQunatidade1" pref="213" max="32767" attributes="0"/>
+                          <Component id="jTxtQuantidade" pref="213" max="32767" attributes="0"/>
                           <Component id="jTxtTotal" alignment="0" max="32767" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
-              <EmptySpace pref="34" max="32767" attributes="0"/>
+              <EmptySpace pref="38" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -138,8 +138,8 @@
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jCboProdutos" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="jTxtQunatidade1" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jCboBebidas" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jTxtQuantidade" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
@@ -148,13 +148,13 @@
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jTxtValorUnitario1" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jTxtPreco" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jTxtTotal" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="68" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="jBtnCancelar" alignment="3" min="-2" pref="41" max="-2" attributes="0"/>
-                  <Component id="jBtnOK1" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jBtnoK" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="32767" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
@@ -183,7 +183,7 @@
     </Component>
     <Component class="javax.swing.JTextField" name="jTxtTotal">
     </Component>
-    <Component class="javax.swing.JButton" name="jBtnOK1">
+    <Component class="javax.swing.JButton" name="jBtnoK">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
           <Image iconType="3" name="/imagens/ok.png"/>
@@ -191,7 +191,7 @@
         <Property name="text" type="java.lang.String" value="ok"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jBtnOK1ActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jBtnoKActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JButton" name="jBtnCancelar">
@@ -205,13 +205,14 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jBtnCancelarActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JComboBox" name="jCboProdutos">
+    <Component class="javax.swing.JComboBox" name="jCboBebidas">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
           <StringArray count="0"/>
         </Property>
       </Properties>
       <AuxValues>
+        <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new javax.swing.JComboBox&lt;JmjBebidas&gt;()"/>
         <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;JmjBebidas&gt;"/>
       </AuxValues>
     </Component>
@@ -220,18 +221,21 @@
         <Property name="text" type="java.lang.String" value="Quantidade"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="jTxtQunatidade1">
+    <Component class="javax.swing.JTextField" name="jTxtQuantidade">
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTxtQuantidadeActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel3">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Valor unit&#xe1;rio"/>
+        <Property name="text" type="java.lang.String" value="Pre&#xe7;o:"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="jTxtValorUnitario1">
+    <Component class="javax.swing.JTextField" name="jTxtPreco">
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel16">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Produto:"/>
+        <Property name="text" type="java.lang.String" value="Bebidas:"/>
       </Properties>
     </Component>
   </SubComponents>
