--- a/src/view/JFrmPrincipal.form
+++ b/src/view/JFrmPrincipal.form
@@ -23,7 +23,7 @@
                   <KeyStroke key="Ctrl+C"/>
                 </Property>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/imagens/132253_users_icon.png"/>
+                  <Image iconType="3" name="/img/132253_users_icon.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Clientes"/>
               </Properties>
@@ -37,7 +37,7 @@
                   <KeyStroke key="Ctrl+U"/>
                 </Property>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/imagens/1564534_customer_man_user_account_profile_icon.png"/>
+                  <Image iconType="3" name="/img/1564534_customer_man_user_account_profile_icon.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Usu&#xe1;rios"/>
               </Properties>
@@ -51,7 +51,7 @@
                   <KeyStroke key="Ctrl+V"/>
                 </Property>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/imagens/trabalho-em-equipe.png"/>
+                  <Image iconType="3" name="/img/trabalho-em-equipe.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Vendedores"/>
               </Properties>
@@ -65,7 +65,7 @@
                   <KeyStroke key="Ctrl+B"/>
                 </Property>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/imagens/incluir.png"/>
+                  <Image iconType="3" name="/img/carrinho.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Bebidas "/>
               </Properties>
@@ -81,7 +81,7 @@
                   <KeyStroke key="Ctrl+S"/>
                 </Property>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/imagens/exit.png"/>
+                  <Image iconType="3" name="/img/exit.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Sair"/>
               </Properties>
@@ -102,7 +102,7 @@
                   <KeyStroke key="Ctrl+D"/>
                 </Property>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/imagens/carrinho.png"/>
+                  <Image iconType="3" name="/img/carrinho.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Vendas"/>
               </Properties>
@@ -116,7 +116,7 @@
                   <KeyStroke key="Ctrl+E"/>
                 </Property>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/imagens/incluir.png"/>
+                  <Image iconType="3" name="/img/alterar.png"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="VendasBebidas"/>
               </Properties>
